log
vi.,  8 de abr. de 2022 17:50:24: 
 tests:  0|6
total_score: 0/70
8e0c66f
vi.,  8 de abr. de 2022 17:50:55: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:58:5: error: implicit declaration of function 'ford' [-Werror=implicit-function-declaration]
     ford(int i = 0 ; i < capacity; i++){
     ^~~~
hashmap.c:58:10: error: expected expression before 'int'
     ford(int i = 0 ; i < capacity; i++){
          ^~~
hashmap.c:58:40: error: expected ';' before '{' token
     ford(int i = 0 ; i < capacity; i++){
                                        ^
cc1.exe: all warnings being treated as errors
Compilation failed
c0ea46d
vi.,  8 de abr. de 2022 17:52:14: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e3ea720
vi.,  8 de abr. de 2022 18:00:47: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  5|4
total_score: 30/70
8d60e8f
vi.,  8 de abr. de 2022 18:37:50: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:85:15: error: 'return' with a value, in function returning void [-Werror]
        return aux;
               ^~~
hashmap.c:74:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c:88:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
hashmap.c:74:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c: In function 'searchMap':
hashmap.c:95:13: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
 int * ret = searchMap(map,key);
             ^~~~~~~~~
hashmap.c:95:7: error: unused variable 'ret' [-Werror=unused-variable]
 int * ret = searchMap(map,key);
       ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
4c3a154
vi.,  8 de abr. de 2022 18:39:17: 
 hashmap.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:96:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
3888175
vi.,  8 de abr. de 2022 18:42:54: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:81:5: error: implicit declaration of function 'whail' [-Werror=implicit-function-declaration]
     whail(map -> buckets[indice] != NULL){
     ^~~~~
hashmap.c:81:42: error: expected ';' before '{' token
     whail(map -> buckets[indice] != NULL){
                                          ^
hashmap.c:78:7: error: unused variable 'aux' [-Werror=unused-variable]
 Pair *aux ;
       ^~~
hashmap.c:90:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
f6f222c
vi.,  8 de abr. de 2022 18:44:05: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:90:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c35b827
sá.,  9 de abr. de 2022 18:02:05: 
 hashmap.c | 27 +++++++++++++++++++++++++--
 1 file changed, 25 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:101:14: error: too few arguments to function 'hash'
     indice = hash (key);
              ^~~~
hashmap.c:26:6: note: declared here
 long hash( char * key, long capacity) {
      ^~~~
hashmap.c:103:25: error: 'capacity' undeclared (first use in this function)
     for(int i = 0 ; i < capacity ; i++){
                         ^~~~~~~~
hashmap.c:103:25: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:105:20: error: invalid operands to binary == (have 'HashMap {aka struct HashMap}' and 'void *')
         if(map[aux]== NULL){
            ~~~~~~~~^~
hashmap.c:106:20: error: return makes pointer from integer without a cast [-Werror=int-conversion]
             return aux;
                    ^~~
hashmap.c:108:20: error: incompatible type for argument 1 of 'strcmp'
         if(!strcmp(map[aux],key)){
                    ^~~
In file included from test.c:3:0:
c:\mingw\include\string.h:77:38: note: expected 'const char *' but argument is of type 'HashMap {aka struct HashMap}'
 _CRTIMP __cdecl __MINGW_NOTHROW  int strcmp (const char *, const char *) __MINGW_ATTRIB_PURE;
                                      ^~~~~~
In file included from test.c:4:0:
hashmap.c:109:16: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return aux;
                ^~~
hashmap.c:112:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return indice;
            ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d7a1dec
